# baldwin

./: .clang-format  .gitmodules  LICENSE  README.md
Engine/: .gitignore  CMakeLists.txt
Engine/include/: graphics_macros.hpp
Engine/shaders/: test.comp  test.comp.glsl  test_triangle.frag.glsl  test_triangle.vert.glsl
Engine/src/: engine.cpp  engine.h  engine.hpp
Engine/src/renderer/: renderer.hpp
Engine/src/renderer/vulkan/: vk_descriptors.cpp  vk_descriptors.hpp  vk_images.cpp  vk_images.hpp  vk_infos.cpp  vk_infos.hpp  vk_pipelines.cpp  vk_pipelines.hpp  vk_renderer.cpp  vk_renderer.hpp  vk_shaders.cpp  vk_shaders.hpp
TestBed/: .gitignore  CMakeLists.txt  main.cpp
